fixup admin platform
